--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,2 @@
 DB_CONNECT=mongodb+srv://peter3403:peter1215@cluster0.ugoafy7.mongodb.net/?retryWrites=true&w=majority
+PASSPORT_SECRET=THISISMYTOPSECRETTHATISIMPORTANT
